src/test/vm/typehint_lsb_parent.php.exp
A accepts param from subclass A
HipHop Fatal error: Argument 1 passed to B::bar() must be an instance of parent, A given in src/test/vm/typehint_lsb_parent.php on line 19
